--- a/tmux.conf
+++ b/tmux.conf
@@ -38,6 +38,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Vim style pane selection
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
@@ -59,6 +65,9 @@ set -sg escape-time 0
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
+
+set -g  default-terminal            "tmux-256color"
+set -ga terminal-overrides          ",xterm-256color:Tc"
 
 # This tmux statusbar config was created by tmuxline.vim
 # on Thu, 10 Sep 2020
